minor bugfixes and screenoverflow fixed

--- a/static/style.css
+++ b/static/style.css
@@ -23,7 +23,8 @@ body {
     color: white;
     position: relative;
     float: right;
-    padding-right: 10px;    
+    padding-right: 10px;  
+    overflow: hidden;
 }
 
 .numbers {
@@ -42,6 +43,7 @@ body {
 	text-align: center;
     font-size: 25px;
     padding-top: 6px;
+    cursor: pointer;
 }
 
 #zero {
@@ -64,6 +66,7 @@ body {
 	text-align: center;
     font-size: 25px;
     padding-top: 6px;
+    cursor: pointer;
 }
 
 .operators span:first-child {
@@ -86,4 +89,5 @@ body {
 
 * {
   box-sizing: border-box;
+  user-select: none;
 }
